# finalhe

./: .gitignore  CHANGES  CMakeLists.txt  CONTRIBUTORS.md  CREDITS.md  README.md  finalhe.pro  macOSBuildScript.sh
src/: CMakeLists.txt  FinalHE  downloader.cc  downloader.hh  finalhe.cc  finalhe.hh  finalhe.icns  finalhe.qrc  finalhe.rc  finalhe.ui  log.cc  log.hh  main.cc  package.cc  package.hh  resource.h  sforeader.cc  sforeader.hh  src.pro  version.hh  vita.cc  vita.hh  worker.cc  worker.hh
src/resources/xml/: psp2-updatelist.xml
src/translations/: cs_CZ.ts  de_DE.ts  en_US.ts  es_ES.ts  fr_FR.ts  it_IT.ts  ja_JP.ts  jp_JP.ts  pl_PL.ts  pt_BR.ts  ru_RU.ts  tr_TR.ts  zh_CN.ts  zh_CS.ts  zh_TW.ts
